# nohlee-llm-workbench

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: index.md
results_ui/: index.html  package-lock.json  package.json  vite.config.js
results_ui/src/: App.jsx  styles.css
src/openai_lab/: model_registry.py  openai_client_runner.py  openai_utils.py  prompts.py  schemas.py  server.py
