[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-lab"
version = "0.1.0"
description = "Small runner for experimenting with the OpenAI API."
requires-python = ">=3.10"
dependencies = [
  "openai",
  "python-dotenv",
  "fastapi",
  "uvicorn",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/openai_lab"]
